# electron-websocket-bridge

./: .gitignore  READMD.md  TODO.md  compile  libcontroller.sh  openSpotifyHack.ts  package.json  spotifyHack.js  spotifyHack.ts
.github/workflows/: cmake-multi-platform.yml
bindings/bash/: controller.sh
bindings/python/: websocket_controller.py
bindings/web/: socket.js
client/: client.html  main.js  rest.js  rtc.js  socket.js  socketMain.js
gui/: CMakeLists.txt  compile_commands.json
gui/include/: Rest.hpp  WebSocket.hpp
gui/src/: Rest.cpp  WebSocket.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
injectionScripts/: globals.d.ts  openSpotifyHack.ts  spotifyHack.ts
main/: CMakeLists.txt
main/gui/: CMakeLists.txt
main/gui/.cache/clangd/index/: Log.hpp.27CCA79EF5344E7A.idx  Rest.hpp.4DF760959A8C07B4.idx  WebSocket.hpp.C0D96430442D2B81.idx  alloc.hpp.6D97F1351CE1AB1B.idx  asio.hpp.1BC078683BF8E2F3.idx  asio_no_tls_client.hpp.0AE5EF537C56A66D.idx  base.hpp.8046A4392D71E06A.idx  base.hpp.C8AB71656988B23E.idx  base.hpp.F6B2C22DD6708D80.idx  base.hpp.FAC1B58817347B08.idx  base64.hpp.8525E6F49F66F506.idx  basic.hpp.25BFD4E08E9A8396.idx  basic.hpp.5BF607C61622B9CD.idx  chrono.hpp.6477BEC1B57700A2.idx  client.hpp.64F87481C74B011C.idx  client_endpoint.hpp.499CE9BF16FBF265.idx  close.hpp.340ADC6A673A6823.idx  connection.hpp.29EA4A8F12623AD4.idx  connection.hpp.32CFEF6EBB9D1822.idx  connection.hpp.91185D9E3A40D11E.idx  connection.hpp.E3940A4AF0E83334.idx  connection_base.hpp.374D3ADBCF81A73C.idx  connection_hdl.hpp.01141DFF51575CEA.idx  connection_impl.hpp.36E83E9E6620AB6F.idx  constants.hpp.9675821EF16CB5B8.idx  core_client.hpp.E5ED6D554260DC70.idx  cpp11.hpp.FEF4DE180656B455.idx  disabled.hpp.B8C8E0B1B2C6EF72.idx  endpoint.hpp.711F659A7340FCD6.idx  endpoint.hpp.8D8CC63AC40E5A0D.idx  endpoint.hpp.9A4F32B99D89ADD1.idx  endpoint.hpp.C2531CA6FE93CB8C.idx  endpoint_base.hpp.6038BCB7D8358CF5.idx  endpoint_impl.hpp.E2C3F8F5FE8A54D9.idx  error.hpp.A0EB4EAD23F8C602.idx  extension.hpp.D4ECACF8A4276C7D.idx  frame.hpp.686D95EC7F7BD1F6.idx  functional.hpp.760296B1ED5F8060.idx  httplib.h.90D70CCB7C7A273C.idx  hybi00.hpp.DB403A8307B5936E.idx  (+32 more)
main/gui/include/gui/: Rest.hpp  UIMainWindow.hpp  WebSocket.hpp
main/gui/src/: Rest.cpp  UIMainWindow.cpp  WebSocket.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
main/server/: CMakeLists.txt
main/server/include/server/: Server.hpp
main/server/src/: Server.cpp  main.cpp
server/: CMakeLists.txt  compile_commands.json
server/include/: Log.hpp  Server.hpp  precompiled.hpp
server/src/: Server.cpp  _precompiled.cpp  main.cpp  precompiled.cpp  server.cpp
